--- a/homework 1/task2/index.html
+++ b/homework 1/task2/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>task 2</title>
-        <script src="script.js"></script>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>task 2</title>
+    <script src="script.js"></script>
+  </head>
 </html>
